k8s/kube-prometheus-stack/base/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.aws.wiktorkowalski.pl`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
      middlewares:
        - name: secure-headers
          namespace: traefik-system
        - name: compress
          namespace: traefik-system
  tls:
    certResolver: letsencrypt
